fix(ui): fix the alignment of previous tests
Fix the padding around the previous tests table.

Fixes: #2625.

--- a/ui/src/app/machines/views/MachineDetails/MachineTests/MachineTestsTable/index.scss
+++ b/ui/src/app/machines/views/MachineDetails/MachineTests/MachineTestsTable/index.scss
@@ -28,7 +28,7 @@
       flex: 0 0 4.5rem;
     }
 
-    .p-table-expanding__panel {
+    .p-table__expanding-panel {
       margin-left: 0;
       margin-right: 0;
       padding-left: 0;
